--- a/main.css
+++ b/main.css
@@ -1,68 +1,53 @@
-/* Defaults */
+/*########### Defaults ###########*/
 
-nav, header, footer {
-    display: block;
-}
-
-.container {
-    width:100%;
-    margin:auto;
-    padding-top: 4%;
-    padding-bottom: 4%;
+nav,
+header,
+footer {
+  display: block;
 }
 
 body {
-    line-height: 1;
-    margin: 0;
+  line-height: 1;
+  margin: 0;
 }
 
-
-/* Navbar */
-
-nav {
-    width: 100%;
-    margin: 0;
-    background-color: aqua;
-    background-image: linear-gradient(to bottom right, aqua , azure);
+label {
+  font-size: 35px;
+  font-weight: 600;
 }
 
-nav ul {
-    overflow: hidden; /* any of the elements which are big will be sent to hidden */
-    margin: 0;
-    padding: 0;
-    
+p {
+  font-size: 28px;
+  line-height: 1.2;
 }
 
-ul.topnav li  {
-    list-style: none;
-    float: left;
+article p {
+  font-size: 35px;
+  padding: 20px;
 }
 
-ul.topnav li.topnav-right  {
-    float: right;
+.container {
+  width: 100%;
+  margin: auto;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
-ul.topnav li a {
-    display: block;
-    text-decoration: none;
-    min-height: 16px;
-    text-align: center;
-    padding: 14px;
-    text-transform: uppercase;
-    color:black;
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-ul.topnav li a:hover {
-    background-color: brown;
-    color: aliceblue;
-}
-
-ul.topnav li.dropdownIcon {
-    display: none;
+.row::after {
+  display: table;
+  clear: both;
+  content: "";
 }
 
 .col-1 {width: 8.33%;}
-.col-2 {width: 16.33%;}
+.col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
 .col-5 {width: 41.66%;}
@@ -74,101 +59,231 @@ ul.topnav li.dropdownIcon {
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
-
-.row {
-    width:100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+* {
+  box-sizing: border-box;
 }
 
-.row::after {
-    display: table;
-    clear: both;
-    content: "";
+/*############### Nav bar ############*/
+
+nav {
+  width: 100%;
+  margin: 0;
 }
 
-.leftside-col {
-    margin-left: 30%;
+nav ul {
+  background-color: #eee;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
-.rightside-col {
-    margin-left: 15%;
+ul.topnav li {
+  list-style: none;
+  float: left;
 }
-/* custom styles */
-#section1-gradient {
-    background-image: linear-gradient(#076DFF, #65a5ff);
+
+ul.topnav li.topnav-right {
+  float: right;
+}
+
+ul.topnav li a {
+  display: block;
+  text-decoration: none;
+  min-height: 16px;
+  text-align: center;
+  padding: 14px;
+  text-transform: uppercase;
+  color: #666;
+}
+
+ul.topnav li a:hover {
+  background-color: #0080ff;
+  color: #fff;
+}
+
+ul.topnav li.dropdownIcon {
+  display: none;
+}
+
+/*##### Custom styles #########*/
+
+#section-1-gradient {
+  background: #076DFF; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#076DFF, #65a5ff); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#076DFF, #65a5ff); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#076DFF, #65a5ff); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#076DFF, #65a5ff); /* Standard syntax */
+}
+
+
+div.box {
+  text-align: center;
+  margin: 24px;
+  padding: 36px 24px 40px 24px;
+  border-radius: 7px;
+  background-color: #fff;
+  box-shadow: 0 0 0 1px rgba(0,0,0,.15),
+    0 2px 3px 0 rgba(0,0,0,.1);
+}
+
+div.slopeIcon img {
+  display: block;
+  margin: auto;
+  box-shadow: -2px/*H*/ -2px/*V*/ 20px/*B*/ 2px/*S*/ rgba(0/*Sh*/,0/*BG*/, 0/*BX*/,.15/*Op*/ ), 2px 2px 17px 2px rgba(0,0,0,1);
+}
+
+button {
+  font-size: 32px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #0069ff;
+  padding: 15px 60px;
+  display: block;
+  text-align: center;
+  margin: 5px;
+  border-radius: 7px;
+}
+
+button.learnMore {
+  display: block;
+  margin: auto;
+}
+  
+
+div.leftSide-col {
+  margin-left: 30%;
+}
+
+div.rightSide-col {
+  margin-left: 15%;
 }
 
 h1.large {
-    color: white;
-    font-size: 56px;
-    line-height: 70px;
-    margin: 0;
+  color: #fff;
+  font-size: 56px;
+  margin: 0;
+  line-height: 70px;
 }
+
+h1.section2Header {
+  font-size: 65px;
+  text-align: center;
+}
+
 
 form h2 {
-    color: white;
-    
+  color: #fff;
 }
 
-input[type="text"] {
-    font-size: 20px;
-    width: 400px;
-    min-width: 100px;
+input[type="text"]{
+  font-size: 20px;
+  width: 400px;
+  min-width: 100px;
+  padding: 5px;
+  border-radius: 7px;
+}
+
+footer.footsy {
+  background-color: #666;
+  padding-left: 10%;
+}
+
+footer.footsy h1 {
+  color: #fff;
+  font-size: 35px;
+}
+
+footer.footsy ul {
+  list-style: none;
+  text-align: left;
+  padding-left: 0;
+}
+
+footer.footsy ul li {
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+/*######### Mobile ###########*/
+
+@media screen and (max-width: 680px) {
+  ul.topnav li:not(:nth-child(1)) {
+    display: none;
+  }
+  
+  ul.topnav li.dropdownIcon {
+    display: block;
+    float: right;
+  }
+  
+  ul.topnav.responsive li.dropdownIcon {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  
+  ul.topnav.responsive {
+    position: relative;
+  }
+  
+  ul.topnav.responsive li {
+    display: inline;
+    float: none; 
+  }
+  
+  ul.topnav.responsive li a {
+    display: block;
+    text-align: left;
+  }
+  
+  h1.section2Header {
+  font-size: 50px;
+}
+  article p {
+    font-size: 25px;
+  }
+  
+  .col-7,
+  .col-6,
+  .col-5,
+  .col-4 {
+    width: 100%;
+    margin: 0;
+  }
+  
+  div.mobileStack {
+    width: 50%;
+    display: block;
+  }
+  
+  div.box {
     padding: 5px;
-    border-radius: 7px;
-    
-}
-
-/* Mobile*/
-@media screen and (max-width:680px) {
-    ul.topnav li:not(:nth-child(1)) {
-        display: none;
-    }
-    ul.topnav li.dropdownIcon {
-        display: block;
-        float: right;
-    }
-    
-    ul.topnav.responsive li.dropdownIcon {
-        position: absolute;
-        top:0;
-        right:0;
-    }
-    
-    ul.topnav.responsive {
-        position: relative;
-    }
-    ul.topnav.responsive li {
-        display: inline;
-        float: none;
-    }
-    ul.topnav.responsive li a {
-        display: block;
-        text-align: left;
-    }
-    
-    .col-6 {
-        width: 100%;
-        margin: 0;
-    }
-    
-    div.leftside-col,
-    div.rightside-col {
-        margin: 15px;
-        
-    }
-    
-    input [type="text"] {
-        width: 300px;
-    }
-    
-    .video-container iframe {
-        position: relative;
-        width: 100%;
-        margin: 0;
-        overflow: hidden;
-    }
+    display: block;
+  }
+  
+  div.slopeIcon {
+    margin: 10px;
+  }
+  
+  div.slopeIcon img {
+    width: 100%;
+  }
+  
+  div.leftSide-col,
+  div.rightSide-col {
+    margin: 15px;
+  }
+  
+  input[type="text"] {
+    width: 350px;
+  }
+  
+  .videoContainer iframe {
+    position: relative;
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+  }
     
 }
